Fix text overflow on itinerary summary (#509)

--- a/apps/site/assets/css/_trip-plan-results.scss
+++ b/apps/site/assets/css/_trip-plan-results.scss
@@ -20,21 +20,33 @@
     }
   }
 
+  /* stylelint-disable property-no-vendor-prefix */
   &-header {
     background-color: $brand-primary-lightest-contrast;
     border: 1px solid $brand-primary;
     border-bottom: 0;
-    display: flex;
-    font-size: $base-spacing;
-    justify-content: space-between;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     line-height: 1.5;
     margin-top: 0;
     padding: $base-spacing;
+
+    .m-trip-plan-results__itinerary-header-content {
+      -ms-grid-column: 1;
+      grid-column: 1;
+    }
+    .m-trip-plan-results__itinerary-fares {
+      -ms-grid-column: 2;
+      grid-column: 2;
+    }
 
     @include media-breakpoint-down(sm) {
       display: block;
     }
   }
+  /* stylelint-enable property-no-vendor-prefix */
 
   &-accessible {
     @include icon-size-inline(1em);
@@ -91,7 +103,6 @@
   }
 
   &-fares {
-    min-width: 40%;
     padding-left: $base-spacing;
     padding-top: 0;
 
